# parrot

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  Testnet-HOWTO.md  Testnet.md  docker-compose.yml
js/: README.md  package-lock.json  package.json
js/demo/: package-lock.json  package.json
js/demo/src/: atomicSwap.js  burn.js  feeDelegation.js  multiTransfer.js  prc20.js
js/demo/src/util/: util.js
js/e2e_tests/: .eslintrc.js  package-lock.json  package.json
js/e2e_tests/src/: burn.spec.js  feeDelegation.spec.js  multiTransfer.spec.js  prc20.spec.js
js/parrot-client/: .eslintrc.js  package-lock.json  package.json
js/parrot-client/src/: app.js
js/parrot-client/src/parrot/: interface.js
js/parrot-client/src/types/: types.json
js/src/demo/: atomicSwap.js  burn.js  feeDelegation.js  multiTransfer.js  prc20.js
js/src/e2e_tests/: burn.spec.js  feeDelegation.spec.js  multiTransfer.spec.js  prc20.spec.js
js/src/parrot/: interface.js
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  service.rs
pallets/burn/: Cargo.toml
pallets/burn/src/: lib.rs
pallets/delegation/: Cargo.toml
pallets/delegation/src/: lib.rs
pallets/multi-transfer/: Cargo.toml
pallets/multi-transfer/src/: lib.rs
pallets/multi_transfer/: Cargo.toml
pallets/multi_transfer/src/: lib.rs
pallets/prc20/: Cargo.toml
pallets/prc20/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs  misc.rs  prc20.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
