[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'Substrate node template'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-alpha.8'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.2.1"
jsonrpc-core = "14.0.3"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8"}
tracing = "0.1.10"
parking_lot = "0.10.0"

[dependencies.sp-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'
package = "sp-finality-grandpa"

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-finality-tracker]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-keyring]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'





[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'

[dependencies.sc-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'
package = 'sc-finality-grandpa'

[dependencies.sc-client-db]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'
default-features = false

[dependencies.sc-offchain]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'

[dependencies.sc-tracing]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sc-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'



[dependencies.pallet-indices]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-timestamp]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-contracts]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-transaction-payment]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.frame-support]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'
default-features = false

[dependencies.pallet-im-online]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'
default-features = false

[dependencies.pallet-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-staking]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'




[dependencies.node-runtime]
path = '../runtime'
version = '2.0.0-alpha.8'

[dependencies.node-rpc]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.node-primitives]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.node-executor]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'




[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'
# optional = true

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.node-inspect]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'



wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }

[dependencies.browser-utils]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'
package = "substrate-browser-utils"
optional = true








[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[[bin]]
name = 'node-template'
