[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'node-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-alpha.8'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# Third party deps

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.integer-sqrt]
version = '0.1.2'

[dependencies.static_assertions]
version = '1.1.0'

# Primitives 

[dependencies.sp-authority-discovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-authority-discovery'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-consensus-babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-consensus-babe'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.node-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'node-primitives'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-staking'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-keyring]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-keyring'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'
optional = true

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'



# Frame Dependencies 

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system-benchmarking'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'
optional = true

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system-rpc-runtime-api'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-authority-discovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-authority-discovery'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-authorship]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-authorship'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-babe'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-collective]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-collective'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts-primitives'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts-rpc-runtime-api'
tag = 'v2.0.0-alpha.8'
version = '0.8.0-alpha.8'


[dependencies.pallet-democracy]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-democracy'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-elections-phragmen]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-elections-phragmen'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-finality-tracker]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-finality-tracker'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-im-online]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-im-online'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-identity]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-identity'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-membership]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-membership'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-offences]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-offences'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-offences-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-offences-benchmarking'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'
optional = true

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-recovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-recovery'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-session'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-session-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-session-benchmarking'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'
optional = true


[dependencies.pallet-staking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-staking'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-staking-reward-curve]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-staking-reward-curve'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-scheduler'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-society]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-society'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'


[dependencies.pallet-treasury]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-treasury'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-utility'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment-rpc-runtime-api'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-vesting]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-vesting'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'


[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
tag = 'v2.0.0-alpha.8'
version = '1.0.5'


[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'





























[dependencies.multi-transfer]
default-features = false
package = 'multi-transfer'
path = '../pallets/multi_transfer'
version = '2.0.0-alpha.8'

[dependencies.prc20]
default-features = false
package = 'prc20'
path = '../pallets/prc20'
version = '2.0.0-alpha.8'

[dependencies.delegation]
default-features = false
package = 'delegation'
path = '../pallets/delegation'
version = '2.0.0-alpha.8'

[dependencies.burn]
default-features = false
package = 'burn'
path = '../pallets/burn'
version = '2.0.0-alpha.8'





[features]
default = ['std']
std = [
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	"pallet-finality-tracker/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-membership/std",
	"pallet-identity/std",
	"node-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"pallet-society/std",
	"pallet-recovery/std",
	"pallet-vesting/std",
	"pallet-elections-phragmen/std",
    "burn/std",
    "delegation/std",
    "multi-transfer/std",
    "prc20/std"
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
]