[package]
authors = ['wayland@oax.org']
description = 'OAX Misc FRAME pallet'
edition = '2018'
homepage = 'https://oax.org'
license = 'Unlicense'
name = 'multi-transfer'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.frame-system]
default-features = false
#package = 'frame-system'
version = '2.0.0-alpha.5'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.5'

#[dependencies.sp-io]
#default-features = false
#version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.pallet-balances]
version = "2.0.0-alpha.2"
default-features = false

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'frame-system/std',
    'pallet-balances/std',
]
