[package]
authors = ['OAX']
description = 'OAX Multi-Transfer'
edition = '2018'
homepage = 'https://oax.org'
license = 'Unlicense'
name = 'multi_transfer'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.frame-system]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.pallet-balances]
version = "2.0.0-alpha.6"
default-features = false

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'frame-system/std',
    'pallet-balances/std',
]
