[package]
authors = ['OAX']
description = 'OAX PRC20'
edition = '2018'
homepage = 'https://oax.org'
license = 'Unlicense'
name = 'prc20'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.frame-system]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.pallet-balances]
version = "2.0.0-alpha.6"
default-features = false

[dependencies.sp-arithmetic]
version = "2.0.0-alpha.6"
default-features = false

# [dev-dependencies.substrate-test-client]
# version = "2.0.0-dev"
# default-features = false
# git = "https://github.com/paritytech/substrate/"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'frame-system/std',
    'pallet-balances/std',
    'sp-runtime/std',
]
